--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,26 @@
 html {
   box-sizing: border-box;
+  background-color: #65abc5;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 .card {
   max-width: 200px;
   display: grid;
   grid-template-columns: 1fr 20px;
-  border: 1px solid black;
-  border-radius: 2px;
   padding: 2px;
-	background-color: #ffffff;
+  background-color: #ffffff;
+  border-radius: 3px;
+  box-shadow: 0 1px 0 rgba(9,30,66,.25);
+}
+.card-add {
+  color: #5e6c84;
+  font-weight: 400;
+  cursor: pointer;
+}
+.list-header {
+  font-weight: 600px;
+  outline: none;
 }
 .editable-area {
   max-height: 38px;
@@ -16,17 +28,44 @@ html {
   overflow-y: scroll;
   outline: none;
 }
+.edit-sign {
+  cursor: pointer;
+}
 .list {
-	display: grid;
-	grid-auto-rows: auto;
-	row-gap: 10px;
-	width: 200px;
-	padding: 12px 6px;
-	background-color: #ebecf0;
-	border-radius: 3px;
+  display: grid;
+  grid-auto-rows: auto;
+  row-gap: 10px;
+  width: 200px;
+  padding: 12px 6px;
+  background-color: #ebecf0;
+  border-radius: 3px;
+  height: min-content;
+  overflow-y: scroll;
 }
 
-/* .borad-layout {
+.borad-layout {
   display: grid;
-  grid-template-rows: max-content auto;
-} */
+  grid-template-rows: auto;
+  grid-gap: 10px;
+}
+
+.board-lists {
+  display: grid;
+  grid-auto-columns: 220px;
+  grid-auto-flow: column;
+  grid-gap: 10px;
+}
+
+.add-list {
+  height: min-content;
+  cursor: pointer;
+  background-color: #ffffff;
+  opacity: 0.6;
+}
+.board-title {
+  color: #ebecf0;
+  font-weight: bold;
+  font-size: 28px;
+  padding: 5px;
+  outline: none;
+}
