--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@ html {
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 .card {
-  max-width: 200px;
   display: grid;
   grid-template-columns: 1fr 20px;
   padding: 2px;
@@ -23,7 +22,7 @@ html {
   outline: none;
 }
 .editable-area {
-  max-height: 38px;
+  max-height: 75px;
   min-height: 19px;
   overflow-y: scroll;
   outline: none;
@@ -31,16 +30,19 @@ html {
 .edit-sign {
   cursor: pointer;
 }
+.list-container {
+  height: 90vh;
+  overflow-y: scroll;
+}
 .list {
   display: grid;
   grid-auto-rows: auto;
   row-gap: 10px;
-  width: 200px;
+  width: 210px;
   padding: 12px 6px;
   background-color: #ebecf0;
   border-radius: 3px;
   height: min-content;
-  overflow-y: scroll;
 }
 
 .borad-layout {
