--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,9 @@ html {
   font-weight: 400;
   cursor: pointer;
 }
+.card-add p {
+  margin: 0px;
+}
 .list-header {
   font-weight: 600px;
   outline: none;
