--- a/src/styles.css
+++ b/src/styles.css
@@ -4,50 +4,9 @@ html {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-.card {
-  display: grid;
-  grid-template-columns: 1fr 20px;
-  padding: 2px;
-  background-color: #ffffff;
-  border-radius: 3px;
-  box-shadow: 0 1px 0 rgba(9,30,66,.25);
-}
-.card-add {
-  color: #5e6c84;
-  font-weight: 400;
-  cursor: pointer;
-}
-.card-add p {
-  margin: 0px;
-}
-.list-header {
-  font-weight: 600px;
-  outline: none;
-}
-.editable-area {
-  max-height: 75px;
-  min-height: 19px;
-  overflow-y: scroll;
-  outline: none;
-}
-.edit-sign {
-  cursor: pointer;
-}
-.list-container {
-  height: 90vh;
-  overflow-y: scroll;
-}
-.list {
-  display: grid;
-  grid-auto-rows: auto;
-  row-gap: 10px;
-  width: 207px;
-  padding: 12px 6px;
-  background-color: #ebecf0;
-  border-radius: 3px;
-  height: min-content;
-}
-
+/**
+*
+**/
 .borad-layout {
   display: grid;
   grid-template-rows: auto;
@@ -61,16 +20,80 @@ html {
   grid-gap: 10px;
 }
 
-.add-list {
-  height: min-content;
-  cursor: pointer;
-  background-color: #ffffff;
-  opacity: 0.6;
-}
 .board-title {
   color: #ebecf0;
   font-weight: bold;
   font-size: 28px;
   padding: 5px;
   outline: none;
+}
+
+.add-list {
+  height: min-content;
+  cursor: pointer;
+  background-color: rgba(256, 256, 256, 0.24);
+  border-radius: 3px;
+}
+.add-list p {
+  color: #ffffff;
+  padding: 5px;
+  margin: 0px;
+}
+
+/**
+*
+**/
+.list-container {
+  height: 90vh;
+  overflow-y: scroll;
+}
+
+.list {
+  display: grid;
+  grid-auto-rows: auto;
+  row-gap: 10px;
+  width: 207px;
+  padding: 12px 6px;
+  background-color: #ebecf0;
+  border-radius: 3px;
+  height: min-content;
+}
+
+.list-header {
+  font-weight: 600px;
+  outline: none;
+}
+
+.card-add {
+  color: #5e6c84;
+  font-weight: 400;
+  cursor: pointer;
+}
+
+.card-add p {
+  margin: 0px;
+}
+
+/**
+*
+**/
+
+.card {
+  display: grid;
+  grid-template-columns: 1fr 20px;
+  padding: 2px;
+  background-color: #ffffff;
+  border-radius: 3px;
+  box-shadow: 0 1px 0 rgba(9, 30, 66, 0.25);
+}
+
+.editable-area {
+  max-height: 75px;
+  min-height: 19px;
+  overflow-y: scroll;
+  outline: none;
+}
+
+.edit-sign {
+  cursor: pointer;
 }
